frontend/src/functionality/LandingPage/stylesheets/Hero.css
.hero-buttons {
    margin: 40px;
    display: flex;
    gap: 2rem;
    align-items: center;
}

.hero-button {
    position: relative;
    display: inline-flex;
    align-items: center;
    gap: 0.5rem;

    min-width: 170px;
    padding: 1rem 3rem;

    border: none;
    border-radius: 1rem;
    cursor: pointer;
    /* justify-content: center; */

    font-size: 1.4rem;
    font-weight: 600;
    letter-spacing: -0.3px;
    text-align: center;
    transition: all 250ms;
}

.black {
    max-width: 180px;
    background-color: #0f0f10;
    color: #ffffff;
    box-shadow:
        inset 0 1px 0 rgba(255, 255, 255, 0.08),
        0 10px 0 #0b0b0c,
        0 14px 22px rgba(0,0,0,0.25);
}

.black:hover {
    transform: translateY(4px);
    box-shadow:
        inset 0 1px 0 rgba(255, 255, 255, 0.08),
        0 10px 0 #0b0b0c,
        0 14px 22px rgba(0,0,0,0.25);
}

.white {
    max-width: 230px;
    background-color: #e9e9ec;
    color: #1c1c1c;
    box-shadow:
        inset 0 1px 0 rgba(255, 255, 255, 0.9),
        0 10px 0 #d6d6db,
        0 14px 22px rgba(0,0,0,0.12);
}

.white:hover {
    transform: translateY(4px);
    box-shadow:
        inset 0 1px 0 rgba(255, 255, 255, 0.9),
        0 10px 0 #d6d6db,
        0 14px 22px rgba(0,0,0,0.12);
}

.hero-text-top {
    font-size: 70px;
    font-family: sans-serif;
    font-weight: bold;

}

.hero-text-bottom {
    font-size: 70px;
    font-family: sans-serif;
    font-weight: bold
}

.hero-quote {
    padding-left: 30px;
}

.hero {
    margin-top:     0px;
    border-bottom: 1px solid #e6e6ef;
    margin-bottom: 60px;
    padding-bottom: 70px;
}

.hero-content
{
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.hero-left
{
    flex: 1;
}

.hero-right
{
    flex: 1;
    display: flex;
    justify-content: flex-end;
}

.hero-image 
{
    width: 100%;
    max-width: 750px;
    height:auto
}

